package characters;

import java.awt.*;

public class PurpleSlime extends Enemy{

    public PurpleSlime(Image image, double x, double y, double width, double height, String name, int lifePoints, double speed, double attackPower, double defensePoint) {
        super(image, x, y, width, height, name, lifePoints, speed, attackPower, defensePoint);
    }
}
